WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177921
[WinCairo] Fix build after
Bug 167956
https://bugs.webkit.org/show_bug.cgi?id=177921
Summary
[WinCairo] Fix build after Bug 167956
Fujii Hironori
Reported
2017-10-05 00:33:35 PDT
[WinCairo] Fix build after
Bug 167956
https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/6901
> FAILED: bin64/TestWebCoreLib.dll lib64/TestWebCoreLib.lib > cmd.exe /C "cd . && C:\tools\cmake\bin\cmake.exe -E vs_link_dll --intdir=Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir --manifests -- "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Tools\MSVC\14.10.25017\bin\HostX64\x64\link.exe" /nologo Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\win\main.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\win\TestWebCoreStubs.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\TestsController.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\AffineTransform.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\CalculationValue.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\ComplexTextController.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\CSSParser.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\FloatRect.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\FloatPoint.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\FloatSize.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\GridPosition.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\HTMLParserIdioms.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\IntRect.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\IntPoint.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\IntSize.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\LayoutUnit.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\MIMETypeRegistry.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\ParsedContentRange.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\SecurityOrigin.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\SharedBuffer.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\SharedBufferTest.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\TimeRanges.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\TransformationMatrix.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\URL.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\URLParser.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\win\DIBPixelData.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\win\LinkedFonts.cpp.obj Tools\TestWebKitAPI\CMakeFiles\TestWebCoreLib.dir\Tests\WebCore\win\BitmapImage.cpp.obj /out:bin64\TestWebCoreLib.dll /implib:lib64\TestWebCoreLib.lib /pdb:bin64\TestWebCoreLib.pdb /dll /version:0.0 /machine:x64 /DEBUG /OPT:ICF /OPT:REF /INCREMENTAL:NO /INCREMENTAL:NO -LIBPATH:C:\WebKit-BuildSlave\win-cairo-release\build\WebKitBuild\Release\lib64 -LIBPATH:C:\WebKit-BuildSlave\win-cairo-release\build\WebKitLibraries\win\lib64 Crypt32.lib D2d1.lib Dwrite.lib dxguid.lib Iphlpapi.lib Psapi.lib Shlwapi.lib Usp10.lib lib64\WebCore.lib lib64\WebCoreDerivedSources.lib WindowsCodecs.lib lib64\gtest.lib ..\..\WebKitLibraries\win\lib64\cairo.lib lib64\libANGLE.lib libeay32.lib mfuuid.lib ssleay32.lib strmiids.lib vcruntime.lib CFlite.lib ..\..\WebKitLibraries\win\lib64\libxml2.lib ..\..\WebKitLibraries\win\lib64\libxslt.lib ..\..\WebKitLibraries\win\lib64\SQLite3.lib lib64\JavaScriptCore.lib lib64\PAL.lib ..\..\WebKitLibraries\win\lib64\zdll.lib ..\..\WebKitLibraries\win\lib64\libcurl_imp.lib ..\..\WebKitLibraries\win\lib64\ssleay32.lib ..\..\WebKitLibraries\win\lib64\libeay32.lib ..\..\WebKitLibraries\win\lib64\libjpeg.lib ..\..\WebKitLibraries\win\lib64\libpng.lib ..\..\WebKitLibraries\win\lib64\zdll.lib ..\..\WebKitLibraries\win\lib64\libcurl_imp.lib ..\..\WebKitLibraries\win\lib64\ssleay32.lib ..\..\WebKitLibraries\win\lib64\libeay32.lib ..\..\WebKitLibraries\win\lib64\libjpeg.lib ..\..\WebKitLibraries\win\lib64\libpng.lib ..\..\WebKitLibraries\win\lib64\cairo.lib CFLite.lib comctl32.lib crypt32.lib iphlpapi.lib libcurl_imp.lib rpcrt4.lib shlwapi.lib usp10.lib version.lib ws2_32.lib lib64\libEGL.lib lib64\libGLESv2.lib lib64\libANGLE.lib D3d9.lib lib64\WTF.lib ..\..\WebKitLibraries\win\lib64\libicuuc.lib winmm.lib ..\..\WebKitLibraries\win\lib64\libicuin.lib CFlite.lib kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib && cd ." > Creating library lib64\TestWebCoreLib.lib and object lib64\TestWebCoreLib.exp > > WebCore.lib(ComplexTextController.cpp.obj) : error LNK2019: unresolved external symbol "public: class WebCore::Font const * __cdecl WebCore::FontCascade::fontForCombiningCharacterSequence(wchar_t const *,unsigned __int64)const " (?fontForCombiningCharacterSequence@FontCascade@WebCore@@QEBAPEBVFont@
2@PEB_W_K@Z
) referenced in function "private: void __cdecl WebCore::ComplexTextController::collectComplexTextRuns(void)" (?collectComplexTextRuns@ComplexTextController@WebCore@@AEAAXXZ) > > bin64\TestWebCoreLib.dll : fatal error LNK1120: 1 unresolved externals
Attachments
Patch
(1.51 KB, patch)
2017-10-05 01:10 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-10-05 01:10:09 PDT
Created
attachment 322802
[details]
Patch
WebKit Commit Bot
Comment 2
2017-10-05 03:49:49 PDT
Comment on
attachment 322802
[details]
Patch Clearing flags on attachment: 322802 Committed
r222908
: <
http://trac.webkit.org/changeset/222908
>
WebKit Commit Bot
Comment 3
2017-10-05 03:49:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-10-05 03:50:34 PDT
<
rdar://problem/34830965
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug