[WinCairo] Fix build after Bug 167956 https://bugs.webkit.org/show_bug.cgi?id=177921

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-10-05
Reviewed by Carlos Garcia Campos.

FontCascade::fontForCombiningCharacterSequence wasn't defined for
WinCairo port. It should be defined if !USE(HARFBUZZ).

No new tests because there is no behavior change.

* platform/graphics/FontCascade.cpp: Use !USE(HARFBUZZ) instead of !USE(CAIRO).

Canonical link: https://commits.webkit.org/194183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222908 268f45cc-cd09-0410-ab3c-d52691b4dbfc